WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
272026
AX: Assert crash in AXIsolatedObject::attributedStringForTextMarkerRange.
https://bugs.webkit.org/show_bug.cgi?id=272026
Summary
AX: Assert crash in AXIsolatedObject::attributedStringForTextMarkerRange.
Andres Gonzalez
Reported
2024-04-02 06:37:58 PDT
* thread #14, name = 'com.apple.accessibility.secondary', stop reason = EXC_BAD_ACCESS (code=1, address=0x4651000187ff2bd4) * frame #0: 0x0000000329d3b0f4 WebCore`WTFCrashWithInfo(line=218, file="/Users/ag/s/web/OpenSource/Source/WebCore/accessibility/AXObjectCache.cpp", function="static bool WebCore::AXObjectCache::accessibilityEnabled()", counter=3949) at Assertions.h:851:5 frame #1: 0x00000003299ceee8 WebCore`WebCore::AXObjectCache::accessibilityEnabled() at AXObjectCache.cpp:218:5 frame #2: 0x0000000327215548 WebCore`WebCore::AXObjectCache::shouldSpellCheck() at AXObjectCacheMac.mm:812:10 frame #3: 0x00000003272150f4 WebCore`WebCore::AXIsolatedObject::attributedStringForTextMarkerRange(this=0x0000000156089260, markerRange=0x000000016b3c6a58, spellCheck=Yes) const at AXIsolatedObjectMac.mm:260:16 frame #4: 0x0000000327214dc8 WebCore`WebCore::AXIsolatedObject::attributedStringForTextMarkerRange(this=0x0000000156013d80, markerRange=0x000000016b3c6a58, spellCheck=Yes) const at AXIsolatedObjectMac.mm:227:28 frame #5: 0x000000032d0f9bc8 WebCore`-[WebAccessibilityObjectWrapper attributedStringForTextMarkerRange:spellCheck:](self=0x0000000158821630, _cmd="attributedStringForTextMarkerRange:spellCheck:", textMarkerRangeRef=0x0000000158855270, spellCheck=Yes) at WebAccessibilityObjectWrapperMac.mm:770:29 frame #6: 0x000000032d113010 WebCore`-[WebAccessibilityObjectWrapper accessibilityAttributeValue:forParameter:](self=0x0000000158821630, _cmd="accessibilityAttributeValue:forParameter:", attribute="AXAttributedStringForTextMarkerRange", parameter=0x0000000158855270) at WebAccessibilityObjectWrapperMac.mm:3564:16 ...
Attachments
Patch
(8.79 KB, patch)
2024-04-02 06:49 PDT
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-04-02 06:38:07 PDT
<
rdar://problem/125779941
>
Andres Gonzalez
Comment 2
2024-04-02 06:49:45 PDT
Created
attachment 470720
[details]
Patch
EWS
Comment 3
2024-04-02 14:30:57 PDT
Committed
276968@main
(3bd815f263d2): <
https://commits.webkit.org/276968@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 470720
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug